--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
     <main>
 <section id="container">
     <article class="cartao">
-        <div class="cartao__conteudo"></div>
+        <div class="cartao__conteudo">
+            <h3>Física e coisas do espaço</h3>
+            <div class="cartao__conteudo__pergunta">
+                Quais as clasificações dos planetas do sistema solar?
+            </div>
+            <div class="cartao__conteudo__resposta">
+                Rochosos e gasósos.
+            </div>
+        </div>
     </article>
+</section>
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            Quantos planetas o sistema solar possui?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            8 planetas.
+        </div>
+    </div>
+</article>
 </section>
     </main>
     <footer>
