--- a/index.html
+++ b/index.html
@@ -32,9 +32,105 @@
     </div>
 </article>
 </section>
+<article class="cartao"></article>
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            Qual o buraco negro mais famoso?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            Ton-718.
+        </div>
+    </div>
+</article>
+</section>
+<article class="cartao"></article>
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            Qual o objeto mais brilhante do espaço?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            Os quazares.
+        </div>
+    </div>
+</article>
+</section>
+<article class="cartao"></article>
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            quais planetas tem aneis?(no sistema solar)
+        </div>
+        <div class="cartao__conteudo__resposta">
+            Saturno,Urano,Netuno e jupiter(poucos, mas tem).
+        </div>
+    </div>
+</article>
+</section>
+<article class="cartao"></article>8 planetas.
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            Qual galaxia esta se aproximando da Via Lactea?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            Andrômeda.
+        </div>
+    </div>
+</article>
+</section>
+<article class="cartao"></article>
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            Qual o nome da estrela que nós orbitamos?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            O Sol.8 planetas.
+        </div>
+    </div>
+</article>
+</section>
+<article class="cartao"></article>
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            Qual o nome do buraco negro no centro da Via Lactea?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            Sagitário A.
+        </div>
+    </div>
+</article>
+</section>
+<article class="cartao"></article>
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            Qual a velocidade da luz?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            299.792.458 m/s.
+        </div>
+    </div>
+</article>
+</section>
+<article class="cartao"></article>
+    <div class="cartao__conteudo">
+        <h3>Física e coisas do espaço</h3>
+        <div class="cartao__conteudo__pergunta">
+            Quais coisas possuem força gravitacional?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            Tudo, porém, ela é fraca pela falta de massa.
+        </div>
+    </div>
+</article>
+</section>
     </main>
     <footer>
-        Prrojeto desenvolvido pela Alura, sem fins lucrativos.
+        <p>Prrojeto desenvolvido pela Alura, sem fins lucrativos.</p>
     </footer>
 </body>
 </html>
