--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Flashcard</title>
 </head>
 <body>
@@ -87,7 +88,7 @@
             Qual o nome da estrela que nós orbitamos?
         </div>
         <div class="cartao__conteudo__resposta">
-            O Sol.8 planetas.
+            O Sol.8 
         </div>
     </div>
 </article>
