--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>8 planetas.
+<article class="cartao"></article>
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
