--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ga+Maamli&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
@@ -37,7 +40,7 @@
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
-            Qual o buraco negro mais famoso?
+            Qual o maior buraco negro?
         </div>
         <div class="cartao__conteudo__resposta">
             Ton-718.
@@ -88,7 +91,7 @@
             Qual o nome da estrela que nós orbitamos?
         </div>
         <div class="cartao__conteudo__resposta">
-            O Sol.8 
+            O Sol.
         </div>
     </div>
 </article>
