--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>
+<article class="cartao">
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
@@ -48,7 +48,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>
+<article class="cartao">
     <div class="cartao__conteudo">
 <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
