--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>
+<article class="cartao">
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
@@ -72,7 +72,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>
+<article class="cartao">
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
@@ -84,7 +84,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>
+<article class="cartao">
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
@@ -96,7 +96,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>
+<article class="cartao">
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
@@ -108,7 +108,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>
+<article class="cartao">
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
         <div class="cartao__conteudo__pergunta">
@@ -120,7 +120,7 @@
     </div>
 </article>
 </section>
-<article class="cartao"></article>
+<article class="cartao">
 a
     <div class="cartao__conteudo">
         <h3>Física e coisas do espaço</h3>
@@ -136,7 +136,7 @@ a
 </section>
     </main>
     <footer>
-        <p>Prrojeto desenvolvido pela Alura, sem fins lucrativos.</p>
+        <p>Prrrojeto desenvolvido pela Alura, sem fins lucrativos.</p>
     </footer>
 </body>
 </html>
