--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ a
 </section>
     </main>
     <footer>
-        <p>Prrrojeto desenvolvido pela Alura, sem fins lucrativos.</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
     </footer>
 </body>
 </html>
